--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "carcloud",
-  "private": "true",
-  "devDependencies": {
+  "version": "0.0.0",
+  "dependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-beta.13"
   }
 }
