--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 - sudo add-apt-repository -y ppa:chris-lea/node.js
 - sudo apt-get update -y
 - sudo apt-get install -y nodejs
-- sudo npm -g install cordova ionic
+- sudo npm -g install cordova ionic bower gulp
 - sudo npm install
 - sudo bower install
 - ionic platform add android
