--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 - sudo apt-get install -y nodejs
 - sudo npm -g install cordova ionic bower gulp
 - sudo npm install
-- sudo bower install
+- bower install
 - ionic platform add android
 before_script:
 - echo "Before script stage"
