--- a/.travis.yml
+++ b/.travis.yml
@@ -13,15 +13,18 @@ install:
 - sudo add-apt-repository -y ppa:chris-lea/node.js
 - sudo apt-get update -y
 - sudo apt-get install -y nodejs
-- sudo npm -g install cordova ionic bower gulp
+- sudo npm -g install cordova ionic bower gulp cordova-gen
 - sudo npm install
 - bower install
 - mkdir {platforms,plugins}
+- mkdir -p platforms/ios/CarCloud/Resources/icons
+- mkdir -p platforms/ios/CarCloud/Resources/splash
 - ionic platform add android
 before_script:
 - echo "Before script stage"
 script:
 - echo "Script stage"
+- cordova-gen 
 - ionic build android
 after_success:
 - echo "After success stage"
