--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 - sudo apt-get install -y python-software-properties
 - sudo add-apt-repository -y ppa:chris-lea/node.js
 - sudo apt-get update -y
-- sudo apt-get install -y nodejs
+- sudo apt-get install -y nodejs imagemagick
 - sudo npm -g install cordova ionic bower gulp cordova-gen
 - sudo npm install
 - bower install
