--- a/.travis.yml
+++ b/.travis.yml
@@ -19,19 +19,20 @@ install:
 - sudo npm -g install cordova ionic bower gulp cordova-gen
 - sudo npm install
 - bower install
-- mkdir -p platforms/ios/CarCloud/Resources/icons
-- mkdir -p platforms/ios/CarCloud/Resources/splash
 before_script:
 - echo "Before script stage"
 script:
 - echo "Script stage"
 - gulp
 - ionic platform add android
-- cordova-gen www/img/all.png "#FFF"
 - cordova plugin add org.apache.cordova.splashscreen
 - cordova plugin add org.apache.cordova.device
 - cordova plugin add org.apache.cordova.dialogs
+- cordova plugin add org.apache.cordova.network-information
 - cordova plugin add https://github.com/driftyco/ionic-plugins-keyboard.git
+- mkdir -p platforms/ios/CarCloud/Resources/icons
+- mkdir -p platforms/ios/CarCloud/Resources/splash
+- cordova-gen www/img/all.png "#FFF"
 - ionic build android
 after_success:
 - bash ./.push-release.sh
