--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ deploy:
   provider: releases
   api_key:
     secure: O6zuQzSv6husuKQkm3XOF2w8wMtxf6osgsN2xisZoGXJoSdk3n5abM17XI23MTzl57CsNnNnk0aASp2gkCUkMvyrXwmVY1aph61ehr6OunNvAnmXsMUF02nglKhmIzMAq7FMOtR/3f4sd1cCeROTEDpZYovFPNnsFIKgrFU4wwM=
-  file: platforms/android/out/*.apk
+  file: platforms/android/ant-build/CordovaApp-debug.apk
   on:
     tags: true
     all_branches: true
