--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-beta.13",
     "ngCordova": "~0.1.4-alpha",
-    "angular-resource": "~1.2.26"
+    "angular-resource": "~1.2.26",
+    "angular-gravatar": "~0.2.3"
   },
   "resolutions": {
     "angular": "1.2.27"
