--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,11 @@ android:
   - android-19
 env:
   global:
-    secure: O6Jl4M2X0K0IKQ8zq/Em1o5POOI4Xl4DG3qTY/QS1/E4jX0+01UpnX0MhEGWoJwqPspIjbcRaNDQCkrQ7oIt+r/hI5zM0bzXJpZ2wEnatZWb//mDoSU5Ge6kbpVk7PrJNsyuU1lkm55m1122Sj1DKuw2N8ZZxsboWiSdY1zoIdQ=
+  - secure: O6Jl4M2X0K0IKQ8zq/Em1o5POOI4Xl4DG3qTY/QS1/E4jX0+01UpnX0MhEGWoJwqPspIjbcRaNDQCkrQ7oIt+r/hI5zM0bzXJpZ2wEnatZWb//mDoSU5Ge6kbpVk7PrJNsyuU1lkm55m1122Sj1DKuw2N8ZZxsboWiSdY1zoIdQ=
+  - secure: ARlWrUWM1DGojjRY9rXJt3OIeGe8XdeNY5ptFsW1ZLl3dpdDUmemTZCh1rPpsb9ZcKGVIrh+cQi5QlNvdTd0XsnIrB4CcU8HMWBC2qMgCzpwXiQr/GuHhY0Vqwd519dHOIFx4E4L+G/qCEJ6EU3YHwsOLBoWujBla4r9CSjQXk8=
 before_install:
+- openssl aes-256-cbc -K $encrypted_9edc950bc507_key -iv $encrypted_9edc950bc507_iv
+  -in carcloud-release-key.keystore.enc -out carcloud-release-key.keystore -d
 - echo "Before install stage"
 install:
 - echo "Install stage"
@@ -40,6 +43,8 @@ script:
 - ionic build --release android
 after_success:
 - bash ./.push-release.sh
+- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore carcloud-release-key.keystore platforms/android/ant-build/CordovaApp-release-unsigned.apk carcloud -storepass $STOREPASS
+- zipalign -v 4 platforms/android/ant-build/CarCloud-release-unsigned.apk platforms/android/ant-build/CarCloud.apk
 after_failure:
 - echo "After failure stage"
 after_script:
@@ -48,7 +53,7 @@ deploy:
   provider: releases
   api_key:
     secure: O6zuQzSv6husuKQkm3XOF2w8wMtxf6osgsN2xisZoGXJoSdk3n5abM17XI23MTzl57CsNnNnk0aASp2gkCUkMvyrXwmVY1aph61ehr6OunNvAnmXsMUF02nglKhmIzMAq7FMOtR/3f4sd1cCeROTEDpZYovFPNnsFIKgrFU4wwM=
-  file: platforms/android/ant-build/CarCloud-release-unsigned.apk
+  file: platforms/android/ant-build/CarCloud.apk
   on:
     tags: true
     all_branches: true
