--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
     "name": "CarCloud",
-    "version": "0.1.$VERSIONCODE",
+    "version": "0.1.1",
     "description": "Tracking, Alerting and more.",
     "devDependencies": {
-        "gulp": "3.6.2",
         "gulp-usemin": "0.3.1",
         "gulp-autoprefixer": "0.0.7",
         "gulp-minify-css": "0.3.3",
@@ -14,24 +13,12 @@
         "gulp-ng-annotate": "0.3.0",
         "gulp-connect": "2.0.4",
         "gulp-clean": "0.2.4",
-        "gulp-karma": "https://github.com/lazd/gulp-karma/tarball/helper",
         "gulp-replace": "0.2.0",
         "gulp-livereload": "1.3.1",
         "gulp-rev": "0.3.2",
         "gulp-jshint": "1.5.5",
         "gulp-browserify": "0.5.0",
         "proxy-middleware": "0.5.0",
-        "event-stream": "3.1.5",
-        "karma-script-launcher": "0.1.0",
-        "karma-chrome-launcher": "0.1.4",
-        "karma-html2js-preprocessor": "0.1.0",
-        "karma-jasmine": "0.2.2",
-        "karma-requirejs": "0.2.2",
-        "karma-phantomjs-launcher": "0.1.4",
-        "karma": "0.12.16",
-        "tmp": "0.0.23",
-        "bower": "1.3.5",
-        "lodash": "2.4.1",
-        "zeparser": "0.0.7"
+        "event-stream": "3.1.5"
     }
 }
