--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-    "name": "CarCloud",
-    "version": "0.1.1",
-    "description": "Tracking, Alerting and more.",
-    "devDependencies": {
-        "gulp-usemin": "0.3.1",
-        "gulp-autoprefixer": "0.0.7",
-        "gulp-minify-css": "0.3.3",
-        "gulp-uglify": "0.2.1",
-        "gulp-minify-html": "0.1.3",
-        "gulp-imagemin": "0.5.0",
-        "gulp-flatten": "0.0.2",
-        "gulp-ng-annotate": "0.3.0",
-        "gulp-connect": "2.0.4",
-        "gulp-clean": "0.2.4",
-        "gulp-replace": "0.2.0",
-        "gulp-livereload": "1.3.1",
-        "gulp-rev": "0.3.2",
-        "gulp-jshint": "1.5.5",
-        "gulp-browserify": "0.5.0",
-        "proxy-middleware": "0.5.0",
-        "event-stream": "3.1.5"
-    }
+  "name": "CarCloud",
+  "version": "0.1.1",
+  "description": "Tracking, Alerting and more.",
+  "devDependencies": {
+    "bower": "^1.3.12",
+    "cordova": "^4.1.2",
+    "cordova-gen": "^1.0.6",
+    "event-stream": "3.1.5",
+    "gulp": "^3.8.10",
+    "gulp-autoprefixer": "0.0.7",
+    "gulp-browserify": "0.5.0",
+    "gulp-clean": "0.2.4",
+    "gulp-connect": "2.0.4",
+    "gulp-flatten": "0.0.2",
+    "gulp-imagemin": "0.5.0",
+    "gulp-jshint": "1.5.5",
+    "gulp-livereload": "1.3.1",
+    "gulp-minify-css": "0.3.3",
+    "gulp-minify-html": "0.1.3",
+    "gulp-ng-annotate": "0.3.0",
+    "gulp-replace": "0.2.0",
+    "gulp-rev": "0.3.2",
+    "gulp-uglify": "0.2.1",
+    "gulp-usemin": "0.3.1",
+    "ionic": "^1.2.13",
+    "proxy-middleware": "0.5.0"
+  }
 }
