--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ android:
   - build-tools-19.0.0
   - android-19
 sudo: false
+cache:
+    directories:
+        - node_modules
+        - src/lib
 env:
   global:
   - secure: O6Jl4M2X0K0IKQ8zq/Em1o5POOI4Xl4DG3qTY/QS1/E4jX0+01UpnX0MhEGWoJwqPspIjbcRaNDQCkrQ7oIt+r/hI5zM0bzXJpZ2wEnatZWb//mDoSU5Ge6kbpVk7PrJNsyuU1lkm55m1122Sj1DKuw2N8ZZxsboWiSdY1zoIdQ=
