--- a/bower.json
+++ b/bower.json
@@ -5,9 +5,13 @@
     "ionic": "driftyco/ionic-bower#1.0.0-beta.13",
     "ngCordova": "~0.1.4-alpha",
     "angular-resource": "~1.2.26",
-    "angular-gravatar": "~0.2.3"
+    "angular-gravatar": "~0.2.3",
+    "ionicons": "~2.0.1"
   },
   "resolutions": {
-    "angular": "1.2.27"
+    "angular-animate": "1.2.28",
+    "angular-sanitize": "1.2.28",
+    "angular-ui-router": "0.2.10",
+    "angular": "1.2.28"
   }
 }
