--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CarCloud",
-  "version": "0.1.$VERSIONCODE",
+  "version": "0.1.1",
   "description": "Tracking, Alerting and more.",
   "devDependencies": {
     "bower": "^1.3.12",
