--- a/bower.json
+++ b/bower.json
@@ -4,9 +4,13 @@
   "dependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-beta.13",
     "ngCordova": "~0.1.4-alpha",
+    "angular-hateoas": "https://github.com/imduffy15/angular-hateoas.git#master",
     "angular-resource": "~1.2.26",
     "angular-gravatar": "~0.2.3",
-    "ionicons": "~2.0.1"
+    "ionicons": "~2.0.1",
+    "angular-local-storage": "~0.1.5",
+    "angular-base64": "~2.0.3",
+    "jquery": "~2.1.3"
   },
   "resolutions": {
     "angular-animate": "1.2.28",
