--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "carcloud",
   "version": "0.0.0",
   "dependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.13",
+    "ionic": "https://github.com/imduffy15/ionic-bower.git#master",
     "ngCordova": "~0.1.4-alpha",
     "angular-hateoas": "https://github.com/imduffy15/angular-hateoas.git#master",
     "angular-resource": "~1.2.26",
