--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "ionicons": "~2.0.1",
     "angular-local-storage": "~0.1.5",
     "angular-base64": "~2.0.3",
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "angular-http-auth": "~1.2.2"
   },
   "resolutions": {
     "angular-animate": "1.2.28",
