--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-local-storage": "~0.1.5",
     "angular-base64": "~2.0.3",
     "jquery": "~2.1.3",
-    "angular-http-auth": "~1.2.2"
+    "angular-http-auth": "~1.2.2",
+    "angular-chosen-localytics": "~1.0.7"
   },
   "resolutions": {
     "angular-animate": "1.2.28",
