--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "angular-base64": "~2.0.3",
     "jquery": "~2.1.3",
     "angular-http-auth": "~1.2.2",
-    "angular-chosen-localytics": "~1.0.7"
+    "selectize": "0.8.5"
   },
   "resolutions": {
     "angular-animate": "1.2.28",
