--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gulp-rev": "0.3.2",
     "gulp-uglify": "0.2.1",
     "gulp-usemin": "0.3.1",
-    "ionic": "^1.2.13",
+    "ionic": "1.3.8",
     "proxy-middleware": "0.5.0"
   }
 }
