--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-base64": "~2.0.3",
     "jquery": "~2.1.3",
     "angular-http-auth": "~1.2.2",
-    "selectize": "0.8.5"
+    "selectize": "0.8.5",
+    "angular-ui-select": "~0.9.6"
   },
   "resolutions": {
     "angular-animate": "1.2.28",
