--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "gulp-usemin": "0.3.1",
     "ionic": "1.3.8",
     "proxy-middleware": "0.5.0"
-  }
+  },
+  "cordovaPlugins": [
+    "plugin.google.maps"
+  ]
 }
