--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-uglify": "0.2.1",
     "gulp-usemin": "0.3.1",
     "ionic": "1.3.8",
-    "proxy-middleware": "0.5.0"
+    "proxy-middleware": "0.5.0",
+    "imagemin-pngquant": "^4.0.0"
   }
 }
