--- a/bower.json
+++ b/bower.json
@@ -12,13 +12,9 @@
     "angular-base64": "~2.0.3",
     "jquery": "~2.1.3",
     "angular-http-auth": "~1.2.2",
-    "selectize": "0.8.5",
-    "angular-ui-select": "~0.9.6"
+    "angular-bootstrap-typeahead": "~0.6.0"
   },
   "resolutions": {
-    "angular-animate": "1.2.28",
-    "angular-sanitize": "1.2.28",
-    "angular-ui-router": "0.2.10",
-    "angular": "1.2.28"
+    "angular": "~1.2.17"
   }
 }
